--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -8,40 +8,21 @@
             <img class="mask mask-circle" src="/profile.jpg" alt="profile image" />
           </div>
         </div>
-      </a>
+      </a> 
+      <div class="text-center">
+        <h1 class="text-3xl font-bold">jemartel</h1>
+         </div> 
     </div>
     <ul class="grow shrink">
       <!-- Sidebar content here -->
       <li><a id="home" href="/">Home</a></li>
       <li><a id="projects" href="/projects">Projects</a></li>
-      <li><a id="services" href="/services">Services</a></li>
-      <li><a id="store" href="/store">Store</a></li>
       <li><a id="blog" href="/blog/">Blog</a></li>
       <li><a id="cv" href="/cv">CV</a></li>
-      <li><a href="mailto:contact.manuelernestog@gmail.com">Contact</a></li>
+      <li><a href="mailto:contact.jpmartel98@gmail.com">Contact</a></li>
     </ul>
     <div class="social-icons px-4 my-2 flex self-center">
-      <a
-        href="https://manuelernestog.github.io/paylink/"
-        target="_blank"
-        class="mx-3"
-        aria-label="Support my work"
-        title="Support my work"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          style="fill: currentColor;transform: ;msFilter:;"
-          ><path
-            fill-rule="evenodd"
-            clip-rule="evenodd"
-            d="M5 2h2v3H5zm4 0h2v3H9zm4 0h2v3h-2zm6 7h-2V7H3v11c0 1.654 1.346 3 3 3h8c1.654 0 3-1.346 3-3h2c1.103 0 2-.897 2-2v-5c0-1.103-.897-2-2-2zm-4 9a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V9h10v9zm2-2v-5h2l.002 5H17z"
-          ></path></svg
-        >
-      </a>
-      <a href="https://github.com/manuelernestog" target="_blank" class="mx-3" aria-label="Github" title="Github">
+      <a href="https://github.com/Kampouse" target="_blank" class="mx-3" aria-label="Github" title="Github">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -55,7 +36,7 @@
           ></path>
         </svg>
       </a>
-      <a href="https://twitter.com/manuelernestog" target="_blank" class="mx-3" aria-label="Twitter" title="Twitter">
+      <a href="https://twitter.com/jemartel98" target="_blank" class="mx-3" aria-label="Twitter" title="Twitter">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -68,7 +49,7 @@
         </svg>
       </a>
       <a
-        href="https://www.linkedin.com/in/manuelernestogr"
+        href="https://www.linkedin.com/in/jemartel"
         target="_blank"
         class="mx-3"
         aria-label="Linkedin"
@@ -103,8 +84,6 @@
 <script>
   const homeLink = document.getElementById("home");
   const projectsLink = document.getElementById("projects");
-  const servicesLink = document.getElementById("services");
-  const storeLink = document.getElementById("store");
   const blogLink = document.getElementById("blog");
   const cvLink = document.getElementById("cv");
 
@@ -112,7 +91,7 @@
 
   const url = window.location.href;
 
-  const pages = [projectsLink, servicesLink, storeLink, blogLink, cvLink];
+  const pages = [projectsLink, blogLink, cvLink];
 
   const activeClass = "bg-base-300"; // For primary color replace with `active` class
 
