--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,17 +14,16 @@ const last_posts = posts.slice(0, 3);
 
     <div class="pb-12 mt-5">
       <div class="text-xl py-1">Hey there 👋</div>
-      <div class="text-5xl font-bold">I'm Manuel Ernesto</div>
-      <div class="text-3xl py-3 font-bold">Software Engineer and Entrepreneur</div>
+      <div class="text-5xl font-bold">I'm Jean-Philippe Martel </div>
+      <div class="text-3xl py-3 font-bold">Software Engineer</div>
       <div class="py-2">
         <text class="text-lg">
-          I made this template for everyone who needs to create a personal website easily and quickly. This template includes Project Section, CV Section, Store, Paginated Blog, RSS Feed, SEO Friendly, Responsive Desing and 29 Visual themes. I hope you find it useful!
+          I'm a software engineer and entrepreneur from Quebec city , Canada. I'm passionate about building great software and helping others do the same. I'm currently working on a few projects, I'm  big fan of new technologies and I'm always looking for new  imporvements to make my life easier.
           </text
         >
       </div>
       <div class="mt-8">
-        <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
-        <a href="https://github.com/manuelernestog/astro-modern-personal-website" target="_blank" class="btn btn-outline ml-5"> Get This template</a>
+        <a class="btn" href="https://www.linkedin.com/in/jemartel/" target="_blank"> Let's connect!</a>
       </div>
     </div>
 
