--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,33 +28,30 @@ const last_posts = posts.slice(0, 3);
     </div>
 
     <div>
-      <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
+      <div class="text-3xl w-full font-bold mb-2">my Latest project(s)</div>
     </div>
 
     <HorizontalCard
-      title="Demo Project 1"
+      title="Transcendence"
       img="/post_img.webp"
-      desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-      url="#"
-      badge="NEW"
+      desc="Final project for the 42 school; full stack web application that lets you play with other people  in real time to pong Made with React, Node.js, Express, Socket.io, and PostgreSQL. and of course of Typescript."
+      url="https://github.com/Kampouse/trans-pong/"
+      showcase="httpss://youtu.be/4Z4Y4Z4Y4Z4"
     />
     <div class="divider my-0"></div>
     <HorizontalCard
-    title="Demo Project 2"
+    title="Webserver"
     img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
+    desc="ever wonder how  http request are  processed? well this project is a simple implementation of  a webserver in C++(98)"
+    url="https://github.com/Kampouse/webserv/"
   />
     <div class="divider my-0"></div>
     <HorizontalCard
-    title="Demo Project 3"
+    title="Cube3D"
     img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
-    badge="FOSS"
+    desc=" A simple raycaster  made with C and the MLX42 library; tlrd:2d map to 3d view."
+    url="https://github.com/Kampouse/cube3d-42-school/"
   />
-
-
     <div>
       <div class="text-3xl w-full font-bold mb-5 mt-10">Latest from blog</div>
     </div>
