added more stuff into cv part

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,10 @@ const last_posts = posts.slice(0, 3);
     title="Cube3D"
     img="/post_img.webp"
     desc=" A simple raycaster  made with C and the MLX42 library; tlrd:2d map to 3d view."
-    url="https://github.com/Kampouse/cube3d-42-school/"
+    target="_self"
+    repo="https://github.com/Kampouse/webserv/"
+    url="/projects/cube3d"
+    showcase="httpss://youtu.be/4Z4Y4Z4Y4Z4"
   />
     <div>
       <div class="text-3xl w-full font-bold mb-5 mt-10">Latest from blog</div>
