--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -1,8 +1,8 @@
 ---
-const { title, img, desc, url, badge, tags, target = '_blank',showcase } = Astro.props;
+const { title, img, desc, url, badge, tags, target = '_blank',showcase,repo } = Astro.props;
 ---
 
-<div class="rounded-lg bg-base-100 hover:shadow-xl transition ease-in-out hover:scale-[102%]">
+<div class="rounded-lg bg-base-100 hover:shadow-xl">
   <a href={url} target={target}>
     <div class="hero-content flex-col md:flex-row">
       {img && <img src={img} alt={title} class="max-w-full md:max-w-[6rem] rounded-lg" />}
@@ -16,6 +16,7 @@ const { title, img, desc, url, badge, tags, target = '_blank',showcase } = Astro
           {tags && tags.map((tag) => <div class="badge badge-outline">{tag}</div>)}
         </div>
          {showcase && <a class = "btn btn-outline btn-primary btn-sm" href ={showcase} target = "_blank" rel = "noopener noreferrer" >Show case</a> }
+         {repo && <a class = "btn btn-outline  btn-sm bg-info" href ={repo} target = "_blank" rel = "noopener noreferrer" >Repository</a> }
       </div>
     </div>
   </a>
