--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -9,10 +9,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-10 text-justify">
-    Engineer in Informatics Science with 6 years + of experience in software development. Dominion of various programming
-    languages, frameworks, CMS and graphics engines. Experience in WEB design and development. Work with Data Base handled
-    systems, as well as design, normalization and migration. Knowledge of work with graphic design tools for image
-    manipulation , User Interfaces design, Web sites, logos and other ones.
+    young and hardwork self-taught developer with a passion for learning new technologies and solving problems. I have a strong background in software development and design. I have worked on a variety of projects, from small to  medium size nothing too big yet :( , and I am always looking for new technial challenges. I am a fast learner and I am always looking for new opportunities to improve my skills.
   </div>
 
   <div class="mb-5">
@@ -21,95 +18,87 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
-      title="Technician Information-Technology"
-      subtitle="2006 to 2009 at Osvaldo Herrera Polytechnic institute, Habana, Cuba"
-    />
+      title="high-school" subtitle="" />
     <TimeLineElement
-      title="Informatics Science Engineer"
-      subtitle="2010 to 2015 at University of Informatics Science (UCI), Habana, Cuba"
+      title="forestery operator" subtitle="2019-2020 Learned to operate heavy equipment" />
+    <TimeLineElement
+      title="on my own [self-taught]" subtitle="during the covid-19 pandemicm 2020 to 2021 at home" />
+
+    <TimeLineElement
+      title="42 Quebec"
+      subtitle=" From 2021 to 2023 at 42, Quebec, Canada"
     />
   </div>
-
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Experience</div>
   </div>
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="UI Designer and Developer at Integral Access Control System (Thesis)"
-      subtitle="From 2015 at XETID, Habana, Cuba"
-      desc="System multiplatform that includes the steps of a company's personnel, the structure and composition thereof, as well as a powerful designer of credentials and module of control of access. Outspread at the MINFAR and another entities of the country. Technologies: C++, Qt Framework, Subversión, Visual Paradigm, PostgreSQL, Jmeter"
-    />
-    <TimeLineElement
-      title="Web Developer at Integral Oil Drilling System 2.0"
-      subtitle="From 2015 to 2016 at CEDIN, UCI, Habana, Cuba"
-      desc="System of steps of process of perforation of oil wells. Outspread in the direction of Intervención of Wells and various wells of drilling of the Occident of the country. Generate reports and graphs of process of perforation making use of data mining. Technologies: Php,Symfony 2.7 , Subversión, PostgreSQL, HigthChart, Ireport, Boostrap 2, JQuery, HTML,CSS, JavaScript"
-    />
-    <TimeLineElement
-      title="Full Stack Dev, Software Architect and Project Leader at Integral Oil Drilling System 3.0"
-      subtitle="From 2016 to 2017 at CEDIN, UCI, Habana, Cuba"
-      desc="System of steps of process of perforation of oil wells. Outspread in the direction of Intervención of Wells and various wells of drilling of the Occident of the country. Generate reports and graphs of process of perforation making use of data mining. Technologies: Php,Symfony 2.8 , Gitlab, PostgreSQL, HigthChart, Boostrap 2, JQuery, HTML,CSS, JavaScript"
-    />
-    <TimeLineElement
-      title="Full Stack Dev, UI/UX Designer and Software Architect at Primary Information System"
-      subtitle="From 2017 to 2018 at CEDIN, UCI, Habana, Cuba"
-      desc="System of steps of primary information at a company. personnel's steps, control of access, impression of credentials, steps of locales, structure and composition. Technologies: Php,Symfony 3.3 , Gitlab, PostgreSQL, , Boostrap 3, JQuery, HTML,CSS, JavaScript"
+      title="Full-Stack Developer"
+      subtitle="Zelexio 2022-2023"
+      desc="I Was a Full-Stack Developer at Zelexio, a startup that  main goal is increase the productivity of Teacher with a Plaform  all-in-one-spot about Grading and Feedback. I self-assigned to adding or improving features to the platform"
     />
   </div>
-
-  <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Certifications</div>
-  </div>
-
-  <ul class="list-disc mx-6 mb-10 grid gap-2">
-    <li>
-      <a href="https://www.efset.org/cert/DxtNKG" target="_blank"> EF SET English Certificate 74/100 (C2 Proficient)</a>
-    </li>
-    <li>
-      <a href="https://certiprof.com/pages/scrum-foundation-professional-certificate-sfpc-en-sp" target="_blank"> Scrum Foundation Professional Certificate (SFPC)</a>
-    </li>
-  </ul>
-
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Skills</div>
   </div>
 
   <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>Spanish (Native)</li>
-    <li>English (C2)</li>
+    <li>French native</li>
+    <li>English  fluent </li>
     <li>JavaScript</li>
     <li>C++</li>
+    <li>Clojure </li>
     <li>PHP</li>
     <li>Ruby</li>
     <li>Postgres SQL</li>
     <li>MySQL</li>
     <li>CSS</li>
+    <li>Typescript</li>
     <li>SASS</li>
-    <li>HTML</li>
+    <li>HTML/JSX</li>
+    <li>React</li>
+    <li>Solidjs</li>
     <li>Node.js</li>
-    <li>Ruby on Rails</li>
-    <li>AngularJS</li>
     <li>VUE</li>
-    <li>Astro</li>
-    <li>Symfony 3</li>
-    <li>Yii2</li>
+    <li>Astro(here)</li>
     <li>Bootstrap</li>
     <li>Taildwind</li>
-    <li>JQuery</li>
     <li>Wordpress</li>
     <li>Git</li>
-    <li>Jira</li>
     <li>Trello</li>
-    <li>BaseCamp</li>
-    <li>Scrum</li>
-    <li>Shape Up</li>
-    <li>LeanStartup</li>
-    <li>UI Design</li>
     <li>WEB Design</li>
-    <li>Logo Design</li>
-    <li>Image Manipulation</li>
-    <li>Office Suite</li>
-    <li>Adobe Photoshop</li>
-    <li>KdenLive</li>
   </ul>
+ 
+  <div class="mb-5">
+    <div class="text-3xl w-full font-bold">Hobbies</div>
+  </div>
+  <div class="mb-10 text-justify"> 
+   <li>
+    I am decently active persone i climb at least 3 times a week.
+    </li>
+    <li>
+     biking one of my favorite activity. for commute or just for fun. 
+    </li>
+    <li>
+    discovering new music and new artist to get inspired. 
+    </li>
+
+  </div>
+  <div class="mb-5">
+    <div class="text-3xl w-full font-bold">Pick a Stack? </div>
+     <i class="text-sm">my 'Current techinal preference' in the 'current web' </i>
+  </div>
+  <div class="mb-10 text-justify"> 
+  <div >
+    <div class="flex flex-row">
+      <div class="flex flex-col">
+        <li>Typescript</li>
+        <li>Solidjs/start</li>
+        <li>tpc</li>
+        <li>taildwind</li>
+      </div>
+  </div>
+  <div class="mb-10 text-justify"> 
 </BaseLayout>
