--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,12 +18,12 @@ const last_posts = posts.slice(0, 3);
       <div class="text-3xl py-3 font-bold">Software Engineer</div>
       <div class="py-2">
         <text class="text-lg">
-          I'm a software engineer and entrepreneur from Quebec city , Canada. I'm passionate about building great software and helping others do the same. I'm currently working on a few projects, I'm  big fan of new technologies and I'm always looking for new  imporvements to make my life easier.
+          I'm a software engineer from Quebec city, Canada. I'm passionate about building great software and helping others do the same. I'm currently working on a few projects, I'm  big fan of new technologies and I'm always looking for new  imporvements to make my life easier.
           </text
         >
       </div>
       <div class="mt-8">
-        <a class="btn" href="https://www.linkedin.com/in/jemartel/" target="_blank"> Let's connect!</a>
+        <a class=" btn btn-outline bg-info" href="https://www.linkedin.com/in/jemartel/" target="_blank"> Let's connect!</a>
       </div>
     </div>
 
@@ -35,15 +35,20 @@ const last_posts = posts.slice(0, 3);
       title="Transcendence"
       img="/post_img.webp"
       desc="Final project for the 42 school; full stack web application that lets you play with other people  in real time to pong Made with React, Node.js, Express, Socket.io, and PostgreSQL. and of course of Typescript."
-      url="https://github.com/Kampouse/trans-pong/"
+      url="/projects/transcendence"
       showcase="httpss://youtu.be/4Z4Y4Z4Y4Z4"
+      target="_self"
+      repo="https://github.com/Kampouse/webserv/"
     />
     <div class="divider my-0"></div>
     <HorizontalCard
     title="Webserver"
     img="/post_img.webp"
     desc="ever wonder how  http request are  processed? well this project is a simple implementation of  a webserver in C++(98)"
-    url="https://github.com/Kampouse/webserv/"
+    url="/projects/webserv"
+    target = "_self"
+    showcase="httpss://youtu.be/4Z4Y4Z4Y4Z4"
+    repo="https://github.com/Kampouse/webserv/"
   />
     <div class="divider my-0"></div>
     <HorizontalCard
