--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -11,7 +11,7 @@ export async function getStaticPaths() {
 }
 
 interface Props {
-    entry: CollectionEntry<"blog">;
+    entry: CollectionEntry<"projects">;
 }
 
 const { entry } = Astro.props;
