added few translation

--- a/src/pages/en/404.astro
+++ b/src/pages/en/404.astro
@@ -1,6 +1,6 @@
 ---
 import { changeLanguage } from "i18next";
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
 
 changeLanguage("en");
 ---
