--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -1,21 +1,23 @@
 ---
-import { CollectionEntry, getCollection } from 'astro:content';
-import { BlogSchema } from '../../content/config';
-import PostLayout from '../../layouts/PostLayout.astro';
+import { changeLanguage } from "i18next";
+import { CollectionEntry, getCollection } from "astro:content";
+import { BlogSchema } from "../../content/config";
+import PostLayout from "../../layouts/PostLayout.astro";
+
+changeLanguage("en");
 
 export async function getStaticPaths() {
-    const postEntries = await getCollection('projects');
-    return postEntries.map(entry => ( { 
-        params: { slug: entry.slug }, props: { entry },
-    } ));
+    const postEntries = await getCollection("projects");
+    return postEntries.map(entry => ({
+        params: { slug: entry.slug },
+        props: { entry },
+    }));
 }
-
 interface Props {
     entry: CollectionEntry<"projects">;
 }
-
 const { entry } = Astro.props;
-const post : BlogSchema = entry.data;
+const post: BlogSchema = entry.data;
 const { Content } = await entry.render();
 ---
 
