--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -1,5 +1,6 @@
 ---
 const { title, img, desc, url, badge, tags, target = '_blank',showcase,repo } = Astro.props;
+import { changeLanguage, t } from "i18next";
 ---
 <div class="rounded-lg bg-base-100 hover:shadow-xl">
   <a href={url} target={target}>
@@ -14,8 +15,8 @@ const { title, img, desc, url, badge, tags, target = '_blank',showcase,repo } = 
         <div class="card-actions justify-end">
           {tags && tags.map((tag) => <div class="badge badge-outline">{tag}</div>)}
         </div>
-         {showcase && <a class = "btn btn-outline btn-primary btn-sm mx-2 " href ={showcase} target = "_blank" rel = "noopener noreferrer" >Show case</a> }
-         {repo && <a class = "btn btn-outline  btn-sm bg-info" href ={repo} target = "_blank" rel = "noopener noreferrer" >Repository</a> }
+         {showcase && <a class = "btn btn-outline btn-primary btn-sm mx-2 " href ={showcase} target = "_blank" rel = "noopener noreferrer" >{ t("site.button-show-case")} </a> }
+         {repo && <a class = "btn btn-outline  btn-sm bg-info" href ={repo} target = "_blank" rel = "noopener noreferrer" >{t("site.button-repo") }</a> }
       </div>
     </div>
   </a>
