--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -1,8 +1,18 @@
+---
+// Import the global.css file here so that it is included on
+// all pages through the use of the <BaseHead /> component.
+import '../styles/global.css';
+import i18next, { t, } from "i18next";
+import { localizePath } from "astro-i18next";
+//check if the default language is set in the browser
+  
+---
+
 <div class="drawer-side bg-base-200">
   <label for="my-drawer" class="drawer-overlay bg-base-200"></label>
   <div class="menu flex flex-col flex-nowrap p-4 overflow-y-auto w-[21rem] bg-base-200 text-base-content">
     <div class="w-fit">
-      <a href="/">
+      <a   href={localizePath("/")}>
         <div class="avatar transition ease-in-out w-1/2 hover:scale-[102%] block m-auto mt-3 mb-6">
           <div>
             <img class="mask mask-circle" src="/profile.jpg" alt="profile image" />
@@ -15,10 +25,10 @@
     </div>
     <ul class="grow shrink">
       <!-- Sidebar content here -->
-      <li><a id="home" href="/">Home</a></li>
-      <li><a id="projects" href="/projects">Projects</a></li>
-      <li><a id="blog" href="/blog/">Blog</a></li>
-      <li><a id="cv" href="/cv">CV</a></li>
+      <li><a id="home" href={ localizePath("/")} >Home</a></li>
+      <li><a id="projects" href={ localizePath("/projects")}>Projects</a></li>
+      <li><a id="blog" href={ localizePath("/blog")}>Blog</a></li>
+      <li><a id="cv" href= { localizePath("/cv")}>CV</a></li>
       <li><a href="mailto:contact.jpmartel98@gmail.com">Contact</a></li>
     </ul>
     <div class="social-icons px-4 my-2 flex self-center">
