--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,22 +3,22 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import SideBar from "../components/SideBar.astro";
-
+import i18next  ,{t} from "i18next";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 
 const { image, title = SITE_TITLE, description = SITE_DESCRIPTION, includeSidebar = true } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en" data-theme="coffee">
+<html lang={i18next.language} data-theme="coffee">
   <head>
-    <BaseHead title={title} description={description} image={image} />
+    <BaseHead title={t("site.title")} description={description} image={image} />
   </head>
   <body>
     <div class="bg-base-100 drawer drawer-mobile">
       <input id="my-drawer" type="checkbox" class="drawer-toggle" />
       <div class="drawer-content flex flex-col bg-base-100">
-        <Header title={SITE_TITLE} />
+        <Header title={t("site.title ")} />
         <div class="md:flex md:justify-center">
           <main class="p-6 pt-10 max-w-[900px]">
             <slot />
