--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -1,13 +1,15 @@
 ---
+import { changeLanguage } from "i18next";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import HorizontalCard from "../../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
 
-export async function getStaticPaths({ paginate }) {
-  const posts = await getCollection("blog");
-  return paginate(posts, { pageSize: 10 });
-}
+changeLanguage("en");
 
+export async function getStaticPaths({ paginate }) {
+    const posts = await getCollection("blog");
+    return paginate(posts, { pageSize: 10 });
+}
 const { page } = Astro.props;
 ---
 
