--- a/src/pages/en/blog/[...page].astro
+++ b/src/pages/en/blog/[...page].astro
@@ -1,20 +1,19 @@
 ---
 import { changeLanguage } from "i18next";
-import BaseLayout from "../../layouts/BaseLayout.astro";
-import HorizontalCard from "../../components/HorizontalCard.astro";
+import BaseLayout from "../../../layouts/BaseLayout.astro";
+import HorizontalCard from "../../../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
 
 changeLanguage("en");
 
 export async function getStaticPaths({ paginate }) {
-    const posts = await getCollection("projects");
+    const posts = await getCollection("blog");
     return paginate(posts, { pageSize: 10 });
 }
 const { page } = Astro.props;
 ---
 
-<BaseLayout title="projects">
- <h1 class="text-4xl font-bold text-center my-10"> non techinal review of projects</h1>
+<BaseLayout title="Blog">
   <ul>
     {
       page.data.map((post) => (
@@ -23,7 +22,7 @@ const { page } = Astro.props;
             title={post.data.title}
             img={post.data.heroImage}
             desc={post.data.description}
-            url={"/projects/" + post.slug}
+            url={"/blog/" + post.slug}
             target="_self"
             badge={post.data.badge}
           />
