--- a/src/pages/en/cv.astro
+++ b/src/pages/en/cv.astro
@@ -1,7 +1,7 @@
 ---
 import { changeLanguage } from "i18next";
-import BaseLayout from "../layouts/BaseLayout.astro";
-import TimeLineElement from "../components/cv/TimeLine.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import TimeLineElement from "../../components/cv/TimeLine.astro";
 
 changeLanguage("en");
 ---
