--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,7 +1,7 @@
 ---
 import { changeLanguage, t } from "i18next";
-import BaseLayout from "../layouts/BaseLayout.astro";
-import HorizontalCard from "../components/HorizontalCard.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import HorizontalCard from "../../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
 import { LanguageSelector } from "astro-i18next/components";
 
@@ -21,15 +21,15 @@ const last_posts = posts.slice(0, 3);
 
    <LanguageSelector
   showFlag={true}
-  languageMapping={{ en: "Anglais" }}
+  languageMapping={{ en: "english", fr: "french", es : "spanish" }}
   class="my-select-class"
-  onchange="console.log('changed')"
+
 />
 
     <div class="pb-12 mt-5">
-      <div class="text-xl py-1">{t("home.hi-there")}</div>
+      <div class="text-xl py-1">{t("home.hi-there","en")}</div>
       <div class="text-5xl font-bold">{t("home.i-am")} </div>
-      <div class="text-3xl py-3 font-bold">{t("home.my-title") }</div>
+      <div class="text-3xl py-3 font-bold">{t("home.my-title")}</div>
       <div class="py-2">
         <text class="text-lg">
           {t("home.i-do")}
@@ -37,7 +37,7 @@ const last_posts = posts.slice(0, 3);
         >
       </div>
       <div class="mt-8">
-        <a class=" btn btn-outline bg-info" href="https://www.linkedin.com/in/jemartel/" target="_blank">{t("home.connect")}</a>
+        <a class=" btn btn-outline bg-info" href="https://www.linkedin.com/in/jemartel/" target="_blank"> Let's connect!</a>
       </div>
     </div>
 
@@ -48,7 +48,7 @@ const last_posts = posts.slice(0, 3);
     <HorizontalCard
       title="Transcendence"
       img="/post_img.webp"
-      desc={t("home.projects.trans.desc")}
+      desc="Final project for the 42 school; full stack web application that lets you play with other people  in real time to pong Made with React, Node.js, Express, Socket.io, and PostgreSQL. and of course of Typescript."
       url="/projects/transcendence"
       showcase="httpss://youtu.be/4Z4Y4Z4Y4Z4"
       target="_self"
@@ -58,7 +58,7 @@ const last_posts = posts.slice(0, 3);
     <HorizontalCard
     title="Webserver"
     img="/post_img.webp"
-    desc={t("home.projects.webserv.desc")}
+    desc="ever wonder how  http request are  processed? well this project is a simple implementation of  a webserver in C++(98)"
     url="/projects/webserv"
     target = "_self"
     showcase="httpss://youtu.be/4Z4Y4Z4Y4Z4"
@@ -68,7 +68,7 @@ const last_posts = posts.slice(0, 3);
     <HorizontalCard
     title="Cube3D"
     img="/post_img.webp"
-    desc={t("home.projects.Cube3d.desc")}
+    desc=" A simple raycaster  made with C and the MLX42 library; tlrd:2d map to 3d view."
     target="_self"
     repo="https://github.com/Kampouse/webserv/"
     url="/projects/cube3d"
