--- a/src/pages/fr/404.astro
+++ b/src/pages/fr/404.astro
@@ -1,8 +1,8 @@
 ---
 import { changeLanguage } from "i18next";
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
 
-changeLanguage("en");
+changeLanguage("fr");
 ---
 
 <BaseLayout title = "404: Not Found" includeSidebar={false}>
