--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -1,11 +1,11 @@
 ---
 import { changeLanguage, t } from "i18next";
-import BaseLayout from "../layouts/BaseLayout.astro";
-import HorizontalCard from "../components/HorizontalCard.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import HorizontalCard from "../../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
 import { LanguageSelector } from "astro-i18next/components";
 
-changeLanguage("en");
+changeLanguage("fr");
 
 const getCurrentLanguage = () => {
     //get current language from url
