--- a/src/pages/fr/projects/[...page].astro
+++ b/src/pages/fr/projects/[...page].astro
@@ -1,10 +1,10 @@
 ---
 import { changeLanguage } from "i18next";
-import BaseLayout from "../../layouts/BaseLayout.astro";
-import HorizontalCard from "../../components/HorizontalCard.astro";
+import BaseLayout from "../../../layouts/BaseLayout.astro";
+import HorizontalCard from "../../../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
 
-changeLanguage("en");
+changeLanguage("fr");
 
 export async function getStaticPaths({ paginate }) {
     const posts = await getCollection("projects");
