--- a/src/pages/fr/projects/[slug].astro
+++ b/src/pages/fr/projects/[slug].astro
@@ -1,20 +1,20 @@
 ---
 import { changeLanguage } from "i18next";
 import { CollectionEntry, getCollection } from "astro:content";
-import { BlogSchema } from "../../content/config";
-import PostLayout from "../../layouts/PostLayout.astro";
+import { BlogSchema } from "../../../content/config";
+import PostLayout from "../../../layouts/PostLayout.astro";
 
-changeLanguage("en");
+changeLanguage("fr");
 
 export async function getStaticPaths() {
-    const postEntries = await getCollection("blog");
+    const postEntries = await getCollection("projects");
     return postEntries.map(entry => ({
         params: { slug: entry.slug },
         props: { entry },
     }));
 }
 interface Props {
-    entry: CollectionEntry<"blog">;
+    entry: CollectionEntry<"projects">;
 }
 const { entry } = Astro.props;
 const post: BlogSchema = entry.data;
