--- a/src/pages/fr/rat.astro
+++ b/src/pages/fr/rat.astro
@@ -1,6 +1,9 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import HorizontalCard from "../components/HorizontalCard.astro";
+import { changeLanguage } from "i18next";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import HorizontalCard from "../../components/HorizontalCard.astro";
+
+changeLanguage("fr");
 ---
 
 <BaseLayout title = "Projects">
