added little unix stuff that look pretty cool

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -25,11 +25,11 @@ import { localizePath } from "astro-i18next";
     </div>
     <ul class="grow shrink">
       <!-- Sidebar content here -->
-      <li><a id="home" href={ localizePath("/")} >Home</a></li>
-      <li><a id="projects" href={ localizePath("/projects")}>Projects</a></li>
-      <li><a id="blog" href={ localizePath("/blog")}>Blog</a></li>
-      <li><a id="cv" href= { localizePath("/cv")}>CV</a></li>
-      <li><a href="mailto:contact.jpmartel98@gmail.com">Contact</a></li>
+      <li><a id="home" href={ localizePath("/")} > ~/</a></li>
+      <li><a id="projects" href={ localizePath("/projects")}>~/Projects</a></li>
+      <li><a id="blog" href={ localizePath("/blog")}>~/Blog</a></li>
+      <li><a id="cv" href= { localizePath("/cv")}>~/CV</a></li>
+      <li><a href="mailto:contact.jpmartel98@gmail.com">~/Contact</a></li>
     </ul>
     <div class="social-icons px-4 my-2 flex self-center">
       <a href="https://github.com/Kampouse" target="_blank" class="mx-3" aria-label="Github" title="Github">
