--- a/src/pages/fr/projects/[...page].astro
+++ b/src/pages/fr/projects/[...page].astro
@@ -1,20 +1,23 @@
 ---
-import { changeLanguage } from "i18next";
 import BaseLayout from "../../../layouts/BaseLayout.astro";
 import HorizontalCard from "../../../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
+import { t, changeLanguage } from "i18next";
+import { localizePath } from "astro-i18next";
+import i18next, { changeLanguage } from "i18next";
 
 changeLanguage("fr");
 
 export async function getStaticPaths({ paginate }) {
-    const posts = await getCollection("projects");
+    const string_lang = i18next.language;
+    const posts = await getCollection("projects-" + string_lang as "projects-en");
     return paginate(posts, { pageSize: 10 });
 }
 const { page } = Astro.props;
 ---
 
 <BaseLayout title="projects">
- <h1 class="text-4xl font-bold text-center my-10"> non techinal review of projects</h1>
+ <h1 class="text-4xl font-bold text-center my-10"> {t( "projects.title")}</h1>
   <ul>
     {
       page.data.map((post) => (
@@ -23,7 +26,7 @@ const { page } = Astro.props;
             title={post.data.title}
             img={post.data.heroImage}
             desc={post.data.description}
-            url={"/projects/" + post.slug}
+            url={  localizePath( "/projects/" + post.slug)}
             target="_self"
             badge={post.data.badge}
           />
