added little translation before attacking the cv part

--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -1,9 +1,8 @@
 ---
-import { changeLanguage } from "i18next";
 import { CollectionEntry, getCollection } from "astro:content";
 import { BlogSchema } from "../../content/config";
 import PostLayout from "../../layouts/PostLayout.astro";
-import i18Next  from "i18next";
+import i18Next, { changeLanguage } from "i18next";
 
 changeLanguage("en");
 
