--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -4,6 +4,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import HorizontalCard from "../../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
 import { LanguageSelector } from "astro-i18next/components";
+import { translation_key as tr } from "../../translation";
 
 changeLanguage("fr");
 
@@ -27,28 +28,28 @@ const last_posts = posts.slice(0, 3);
 />
 
     <div class="pb-12 mt-5">
-      <div class="text-xl py-1">{t("home.hi-there")}</div>
-      <div class="text-5xl font-bold">{t("home.i-am")} </div>
-      <div class="text-3xl py-3 font-bold">{t("home.my-title") }</div>
+      <div class="text-xl py-1">{t(tr.home.hi_there)}</div>
+      <div class="text-5xl font-bold">{t(tr.home.i_am)} </div>
+      <div class="text-3xl py-3 font-bold">{t( tr.home.i_title ) }</div>
       <div class="py-2">
         <text class="text-lg">
-          {t("home.i-do")}
+          {t( tr.home.i_do )}
           </text
         >
       </div>
       <div class="mt-8">
-        <a class=" btn btn-outline bg-info" href="https://www.linkedin.com/in/jemartel/" target="_blank">{t("home.connect")}</a>
+        <a class=" btn btn-outline bg-info" href="https://www.linkedin.com/in/jemartel/" target="_blank">{t(tr.home.connect )}</a>
       </div>
     </div>
 
     <div>
-      <div class="text-3xl w-full font-bold mb-2">{t("home.latest-project")}</div>
+      <div class="text-3xl w-full font-bold mb-2">{t( tr.home.latest_projects )}</div>
     </div>
 
     <HorizontalCard
       title="Transcendence"
       img="/post_img.webp"
-      desc={t("home.projects.trans.desc")}
+      desc={t(tr.projects.trans)}
       url="/projects/transcendence"
       showcase="httpss://youtu.be/4Z4Y4Z4Y4Z4"
       target="_self"
@@ -58,7 +59,7 @@ const last_posts = posts.slice(0, 3);
     <HorizontalCard
     title="Webserver"
     img="/post_img.webp"
-    desc={t("home.projects.webserv.desc")}
+    desc={t(tr.projects.webserv)}
     url="/projects/webserv"
     target = "_self"
     showcase="httpss://youtu.be/4Z4Y4Z4Y4Z4"
