--- a/src/pages/fr/projects/[...page].astro
+++ b/src/pages/fr/projects/[...page].astro
@@ -2,9 +2,9 @@
 import BaseLayout from "../../../layouts/BaseLayout.astro";
 import HorizontalCard from "../../../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
-import { t, changeLanguage } from "i18next";
 import { localizePath } from "astro-i18next";
-import i18next, { changeLanguage } from "i18next";
+import { translation_key } from "../../../translation";
+import i18next, { changeLanguage, t } from "i18next";
 
 changeLanguage("fr");
 
@@ -17,7 +17,7 @@ const { page } = Astro.props;
 ---
 
 <BaseLayout title="projects">
- <h1 class="text-4xl font-bold text-center my-10"> {t( "projects.title")}</h1>
+ <h1 class="text-4xl font-bold text-center my-10"> {t(translation_key.projects.title)}</h1>
   <ul>
     {
       page.data.map((post) => (
