missing current stack and actual text

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -26,11 +26,11 @@ changeLanguage("en");
        subtitle= {t(tr.resume.time_line.professional.subtitle)}
       />
     <TimeLineElement
-      title="on my own [self-taught]" subtitle="during the covid-19 pandemicm 2020 to 2021 at home" />
+      title={t(tr.resume.time_line.covid.title)} subtitle=  {t(tr.resume.time_line.covid.subtitle)} />
 
     <TimeLineElement
-      title="42 Quebec"
-      subtitle=" From 2021 to 2023 at 42, Quebec, Canada"
+      title={t( tr.resume.time_line.school42.title)}
+      subtitle= {t(tr.resume.time_line.school42.subtitle)}
     />
   </div>
   <div class="mb-5">
@@ -39,9 +39,9 @@ changeLanguage("en");
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="Full-Stack Developer"
-      subtitle="Zelexio 2022-2023"
-      desc="I Was a Full-Stack Developer at Zelexio, a startup that  main goal is increase the productivity of Teacher with a Plaform  all-in-one-spot about Grading and Feedback. I self-assigned to adding or improving features to the platform"
+      title={t(tr.resume.time_line.work.zelexio.title)}
+      subtitle= {t(tr.resume.time_line.work.zelexio.subtitle)}
+      desc={t(tr.resume.time_line.work.zelexio.desc)}
     />
   </div>
   <div class="mb-5">
