fixed thi cv only need to write proper text now ;)

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -34,7 +34,7 @@ changeLanguage("en");
     />
   </div>
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Experience</div>
+    <div class="text-3xl w-full font-bold">{t( tr.resume.time_line.work.experience )}</div>
   </div>
 
   <div class="time-line-container mb-10">
@@ -45,7 +45,7 @@ changeLanguage("en");
     />
   </div>
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Skills</div>
+    <div class="text-3xl w-full font-bold">{t( tr.resume.time_line.work.skill)}</div>
   </div>
 
   <ul class="list-disc md:columns-5 columns-2 mx-6">
@@ -73,19 +73,14 @@ changeLanguage("en");
   </ul>
  
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Hobbies</div>
+    <div class="text-3xl w-full font-bold">{t( tr.resume.hobbies.hobbies )}</div>
   </div>
   <div class="mb-10 text-justify"> 
-   <li>
-    I am decently active persone i climb at least 3 times a week.
-    </li>
+   <li>{t(tr.resume.hobbies.climbing.title)}</li>
+    <li> {t(tr.resume.hobbies.biking.title)}</li>
     <li>
-     biking one of my favorite activity. for commute or just for fun. 
+        {t(tr.resume.hobbies.running.title)}
     </li>
-    <li>
-    discovering new music and new artist to get inspired. 
-    </li>
-
   </div>
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Pick a Stack? </div>
