--- a/src/pages/fr/cv.astro
+++ b/src/pages/fr/cv.astro
@@ -73,19 +73,14 @@ changeLanguage("fr");
   </ul>
  
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Hobbies</div>
+    <div class="text-3xl w-full font-bold">{t( tr.resume.hobbies.hobbies )}</div>
   </div>
   <div class="mb-10 text-justify"> 
-   <li>
-    I am decently active persone i climb at least 3 times a week.
-    </li>
+   <li>{t(tr.resume.hobbies.climbing.title)}</li>
+    <li> {t(tr.resume.hobbies.biking.title)}</li>
     <li>
-     biking one of my favorite activity. for commute or just for fun. 
+        {t(tr.resume.hobbies.running.title)}
     </li>
-    <li>
-    discovering new music and new artist to get inspired. 
-    </li>
-
   </div>
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Pick a Stack? </div>
