added more text

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -20,7 +20,7 @@ changeLanguage("en");
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
-      title={t(tr.resume.time_line.high_school.title)}  subtitle= {t( tr.resume.time_line.high_school.title)} />
+      title={t(tr.resume.time_line.high_school.title)}  subtitle= {t( tr.resume.time_line.high_school.subtitle)} />
     <TimeLineElement
       title= {t(tr.resume.time_line.professional.title)}
        subtitle= {t(tr.resume.time_line.professional.subtitle)}
