--- a/src/pages/fr/cv.astro
+++ b/src/pages/fr/cv.astro
@@ -20,7 +20,7 @@ changeLanguage("fr");
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
-      title={t(tr.resume.time_line.high_school.title)}  subtitle= {t( tr.resume.time_line.high_school.title)} />
+      title={t(tr.resume.time_line.high_school.title)}  subtitle= {t( tr.resume.time_line.high_school.subtitle)} />
     <TimeLineElement
       title= {t(tr.resume.time_line.professional.title)}
        subtitle= {t(tr.resume.time_line.professional.subtitle)}
@@ -34,7 +34,7 @@ changeLanguage("fr");
     />
   </div>
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Experience</div>
+    <div class="text-3xl w-full font-bold">{t( tr.resume.time_line.work.experience )}</div>
   </div>
 
   <div class="time-line-container mb-10">
@@ -45,7 +45,7 @@ changeLanguage("fr");
     />
   </div>
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Skills</div>
+    <div class="text-3xl w-full font-bold">{t( tr.resume.time_line.work.skill)}</div>
   </div>
 
   <ul class="list-disc md:columns-5 columns-2 mx-6">
